🐛 Stop code blocks from wrapping when a neighbour expands on hover
Switch pre default from pre-wrap to pre so all code blocks stay on
one line. The hover rule only needs width: max-content now.

--- a/src/styles/1-tools/_syntax-highlighting.scss
+++ b/src/styles/1-tools/_syntax-highlighting.scss
@@ -255,15 +255,7 @@
   .post__content,
   .page__content {
     pre:hover {
-      white-space: pre;
-      word-break: normal;
-      word-wrap: normal;
       width: max-content;
-    }
-
-    pre:hover code[class*='language-'] {
-      white-space: pre;
-      word-break: normal;
     }
   }
 }
