--- a/src/styles/2-base/_base.scss
+++ b/src/styles/2-base/_base.scss
@@ -123,12 +123,10 @@ blockquote {
 }
 
 pre {
-  overflow: auto;
+  overflow-x: auto;
   padding: 15px;
   font-size: 14px;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-  word-break: break-all;
+  white-space: pre;
 }
 
 .post__content,
@@ -201,8 +199,7 @@ pre {
 }
 
 code[class*=language-], pre[class*=language-] {
-  white-space: pre-wrap;
-  word-break: break-all;
+  white-space: pre;
   line-height: inherit;
   color: #f6dd62;
   font-weight: bold;
